--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
             margin: auto;
         }
     </style>
-    <script data-main="assets/javascript/main" src="assets/javascript/lib/require-2.3.2.js"></script>
-
+    <script data-main="assets/javascript/main" src="assets/javascript/lib/require-2.3.2.min.js"></script>
     <!--CDN: see https://github.com/requirejs/example-jquery-cdn-->
-
 </head>
 <body>
 </body>
